[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Fonts/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
resource_local_to_scene = true
bg_color = Color( 0.294118, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 120
outline_size = 5
outline_color = Color( 0.454902, 0.447059, 0.176471, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_fonts/font:outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.9, 2.6, 3.3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0.607843, 0, 1 ), Color( 0.803922, 1, 0, 1 ), Color( 0.14902, 1, 0, 1 ), Color( 0, 0.27451, 1, 1 ), Color( 0.298039, 0, 0.658824, 1 ), Color( 1, 0, 0.866667, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:custom_fonts/font:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 120, 80, 120 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.027451, 0.572549, 0.596078, 1 ), Color( 0.827451, 1, 0, 1 ), Color( 0.027451, 0.572549, 0.596078, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_fonts/font:outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.454902, 0.447059, 0.176471, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:custom_fonts/font:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 120 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.027451, 0.572549, 0.596078, 1 ) ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 1083.0
margin_bottom = 1923.0
color = Color( 0.027451, 0.572549, 0.596078, 1 )

[node name="RegisterButton" type="Button" parent="Background"]
margin_left = 400.0
margin_top = 30.0
margin_right = 710.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Zarejestruj"

[node name="LoginButton" type="Button" parent="Background"]
margin_left = 750.0
margin_top = 30.0
margin_right = 1050.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Zaloguj"

[node name="ProfileButton" type="Button" parent="Background"]
visible = false
margin_left = 50.0
margin_top = 30.0
margin_right = 350.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Profil"

[node name="FriendsButton" type="Button" parent="Background"]
visible = false
margin_left = 50.0
margin_top = 200.0
margin_right = 350.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Znajomi"

[node name="GroupButton" type="Button" parent="Background"]
visible = false
margin_left = 50.0
margin_top = 370.0
margin_right = 350.0
margin_bottom = 520.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Grupy"

[node name="NotificationButton" type="Button" parent="Background"]
visible = false
margin_left = 50.0
margin_top = 540.0
margin_right = 350.0
margin_bottom = 690.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Rachunki"

[node name="LogoutButton" type="Button" parent="Background"]
visible = false
margin_left = 750.0
margin_top = 30.0
margin_right = 1050.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Wyloguj"

[node name="Label" type="Label" parent="."]
margin_left = 53.0
margin_top = 937.0
margin_right = 1066.0
margin_bottom = 1549.0
custom_fonts/font = SubResource( 1 )
text = "Bardzo proszÄ™, 
wyskakuj z hajsu <3"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="pressed" from="Background/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="Background/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="Background/ProfileButton" to="." method="_on_ProfileButton_pressed"]
[connection signal="pressed" from="Background/FriendsButton" to="." method="_on_FriendsButton_pressed"]
[connection signal="pressed" from="Background/GroupButton" to="." method="_on_GroupButton_pressed"]
[connection signal="pressed" from="Background/NotificationButton" to="." method="_on_NotificationButton_pressed"]
[connection signal="pressed" from="Background/LogoutButton" to="." method="_on_LogoutButton_pressed"]
